--- a/assets/style.css
+++ b/assets/style.css
@@ -154,7 +154,7 @@ body {
 	font-weight: 300;
 	font-size: 2.5rem;
 }
-.quote__author, .quote__author * {
+.quote__author {
 	font-family: Spectral;
 	font-weight: 800;
 	font-size: 22px;
